# opagentd

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
config/: opagentd.toml
opagent-api/: Cargo.toml
opagent-api/src/: main.rs
opagent-core/: Cargo.toml
opagent-core/src/: config.rs  lib.rs  message.rs  security.rs
opagent-core/src/agents/: file.rs  git.rs  mod.rs  shell.rs
opagent-core/tests/: integration.rs
opagentctl/: Cargo.toml
opagentctl/src/: main.rs
opagentd/: Cargo.toml
opagentd/src/: main.rs
systemd/: opagentd.service
