[package]
name = "opagent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for opagentd: config, security, agents, and IPC messages"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
