[package]
name = "opagentctl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for controlling the opagentd daemon"

[[bin]]
name = "opagentctl"
path = "src/main.rs"

[dependencies]
opagent-core = { path = "../opagent-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
