[package]
name = "opagentd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Privileged system daemon for LLM-driven agent execution"

[[bin]]
name = "opagentd"
path = "src/main.rs"

[dependencies]
opagent-core = { path = "../opagent-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"
anyhow = "1"
serde_json = "1"
